# esp32-projects

./: .gitattributes  .gitignore  .gitmodules  go.work
cmake/: FindEspIdf.cmake  FindEspIdf.py  UpdateVsCode.cmake  UpdateVsCode.py  setup.cmake
eda/: zandmd.kicad_sym
eda/3d/: 101-106.step  3586KTR.step  824011.stp  AP3032KTR-G1.step  AZ1117IH-3.3TRG1.step  BSS816NWH6327XTSA1.step  CF25081D0R0-10-NH.step  CM1293A-04SO.step  CP2102N-A02-GQFN28.step  DF3A6.8LFV,L3F.step  G120N03D32.step  LSM6DSOTR.step  LTV-847S.STEP  MB14S.STEP  MCP73812T-420IOT.step  PASSIVE-POL-LED-153283367A212.step  PASSIVE-POL-LED-5.7MM.stp  S2B-PH-K-S.step  SHT40-BD1B-R3.STEP  SMAJ5.0A.step  USB4520-03-0-A.stp
eda/disc-charger/: disc-charger.kicad_pcb  disc-charger.kicad_prl  disc-charger.kicad_pro  disc-charger.kicad_sch  esp32.kicad_sch  led.kicad_sch  power.kicad_sch  programmer.kicad_sch  ui.kicad_sch
eda/neopixel-controller/: channel.kicad_sch  connector.kicad_sch  esp32.kicad_sch  neopixel-controller.kicad_pcb  neopixel-controller.kicad_prl  neopixel-controller.kicad_pro  neopixel-controller.kicad_sch  power.kicad_sch  programmer.kicad_sch  sensors.kicad_sch
eda/pinewood-derby-car/: channel.kicad_sch  esp32.kicad_sch  pinewood-derby-car.kicad_pcb  pinewood-derby-car.kicad_prl  pinewood-derby-car.kicad_pro  pinewood-derby-car.kicad_sch  ui.kicad_sch  (+2 more)
firmware/rocket-launcher/components/bsp/: CMakeLists.txt
firmware/rocket-launcher/components/bsp/include/zandmd/bsp/: battery.hpp  bus.hpp  button.hpp  charges.hpp  gpio.hpp  leds.hpp  peripherals.hpp  tasks.hpp
firmware/rocket-launcher/components/bsp/src/: battery.cpp  bus.cpp  button.cpp  charges.cpp  leds.cpp  peripherals.cpp
libraries/drivers/: CMakeLists.txt
libraries/drivers/include/zandmd/drivers/: adc_service.hpp  button.hpp  event_loop.hpp  gpio_isr_service.hpp  lora.hpp  lsm6dso.hpp  nonvol.hpp  power_dump.hpp  rtos_init.hpp  ws2811.hpp
libraries/drivers/src/: adc_service.cpp  button.cpp  event_loop.cpp  gpio_isr_service.cpp  lora.cpp  lsm6dso.cpp  nonvol.cpp  power_dump.cpp  rtos_init.cpp  ws2811.cpp
libraries/secrets/: CMakeLists.txt
libraries/secrets/include/zandmd/secrets/: wifi.hpp
libraries/secrets/src/: generate.py
(+188 files in other folders)
